# MiniGPT

./: .gitignore  MainActivity.kt  Makefile  README.md  benchmark.py  conftest.py  fix_install.sh  main.py  pyproject.toml  requirements.txt  serve.py  setup.py
docs/: DEVELOPMENT.md  FILE_STRUCTURE.md  QUICKSTART.md  TECHSTACK.md  Use_Cases.md
minigpt_core/export/: __init__.py  onnx_export.py
minigpt_core/inference/: __init__.py
minigpt_core/model/: __init__.py  model.py
minigpt_core/tokenizer/: __init__.py  dataset.py  tokenizer.py
minigpt_core/training/: trainer.py
mobile/android/: MiniGPTInference.kt  build.gradle
mobile/ios/: ContentView.swift  MiniGPTInference.swift
scripts/: benchmark.py  export_mobile.py  serve.py
src/: __init__.py
src/export/: onnx_export.py
src/inference/: inference.py
src/model/: config.py  model.py
src/tokenizer/: tokenizer.py
tests/: test_minigpt.py  test_tokenizer.py  test_training.py
web/: demo.html  index.html
web/workers/: inference.worker.js
