[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt"
version = "1.0.0"
description = "Sub-16MB on-device language model — browser, iOS, Android"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["language-model", "transformer", "onnx", "on-device", "tiny-ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.18.0",
    "tokenizers>=0.15.2",
    "transformers>=4.39.0",
    "huggingface-hub>=0.21.0",
    "tqdm>=4.66.0",
]
export = [
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.1.0",
]
mobile-ios = [
    "coremltools>=7.2",
    "onnx>=1.16.0",
]
mobile-android = [
    "onnx-tf>=1.10.0",
    "tensorflow>=2.15.0",
    "onnx>=1.16.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "rich>=13.7.0",
]
all = [
    "minigpt[train,export,dev]",
]

[project.scripts]
minigpt = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "E402", "N806", "B008"]
exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
files = ["src/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:torch",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
