[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt"
version = "1.0.0"
description = "Sub-16MB on-device language model — browser, iOS, Android"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.18.0",
    "tokenizers>=0.15.2",
    "transformers>=4.39.0",
    "huggingface-hub>=0.21.0",
    "tqdm>=4.66.0",
]
export = [
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.1.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
all = ["minigpt[train,export,dev]"]

[project.scripts]
minigpt = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["minigpt_core*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:torch",
]

[tool.coverage.run]
source = ["minigpt_core"]
omit = ["tests/*", "*/__init__.py"]
